--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,42 @@
+* {
+  margin: 0;
+  font-family: "Gotham SSm", sans-serif;
+}
+
 header {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 6vh;
+  font-size: 0.9rem;
+  padding: 0 2rem;
+  background-color: salmon;
+}
+
+.logoHeader {
+  width: 120px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.textHeader_box {
+  min-width: 68%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.productHeader_box > * {
+  padding: 0 0.9rem;
+  text-decoration: none;
+  color: black;
+}
+
+.menuHeader_box > * {
+  padding: 0 0.9rem;
+  text-decoration: none;
+  color: black;
 }
 
 footer {
