--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -24,7 +24,7 @@ header {
 .productHeader_box > * {
   padding: 0.5rem 0.9rem;
   text-decoration: none;
-  color: black;
+  color: #171a20;
   transition: 300ms ease-in-out;
   border-radius: 5px;
 }
@@ -40,7 +40,7 @@ header {
 .menuHeader_box > * {
   padding: 0.5rem 0.9rem;
   text-decoration: none;
-  color: black;
+  color: #171a20;
   border-radius: 5px;
 }
 
