--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -1,7 +1,13 @@
 footer {
+  margin-top: 4vh;
+  height: 5vh;
   text-align: center;
-  position: absolute;
-  bottom: -200vh;
   width: 100%;
   background-color: salmon;
+  display: flex;
+  align-items: center;
+}
+
+footer > div {
+  display: flex;
 }
