--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,7 +41,7 @@ header {
 .productHeader_box > * {
   padding: 0.5rem 0.9rem;
   text-decoration: none;
-  color: black;
+  color: #171a20;
   transition: 300ms ease-in-out;
   border-radius: 5px;
 }
@@ -57,7 +57,7 @@ header {
 .menuHeader_box > * {
   padding: 0.5rem 0.9rem;
   text-decoration: none;
-  color: black;
+  color: #171a20;
   border-radius: 5px;
 }
 
@@ -145,6 +145,7 @@ header {
   font-weight: 350;
   margin: 0 auto;
   text-align: center;
+  color: #171a20;
 }
 
 .CarReserve {
@@ -154,6 +155,15 @@ header {
   text-align: center;
   text-decoration: underline;
   text-underline-offset: 0.3rem;
+  color: #171a20;
+}
+
+.CarInformationSup {
+  font-size: 1rem;
+  margin: 1vh auto;
+  text-align: center;
+  text-underline-offset: 0.3rem;
+  color: #171a20;
 }
 
 .CarButtonBox {
@@ -167,34 +177,55 @@ header {
   margin: 0 1rem;
   color: white;
   height: 4.5vh;
-  min-width: 330px;
+  min-width: 310px;
   border-radius: 5px;
   font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .CarButtonBox > button:first-child {
-  background-color: rgb(63, 63, 63);
+  background-color: rgba(39, 39, 39, 0.886);
   border: 0;
 }
 
 .CarButtonBox > button:last-child {
-  background-color: #e5e5e5;
-  color: black;
+  background-color: rgba(229, 229, 229, 0.7137254902);
+  color: rgba(23, 26, 32, 0.8196078431);
   border: 0;
 }
 
 .CarInformations {
   text-align: center;
   text-decoration: underline;
-  margin-top: 3vh;
+  margin-top: 2.5vh;
   font-size: 0.8rem;
   text-underline-offset: 0.2rem;
+  color: #171a20;
 }
 
+@media screen and (max-device-width: 684px) {
+  .CarButtonBox {
+    flex-direction: column;
+    margin-top: 58vh;
+  }
+  .CarButtonBox > * {
+    width: 300px;
+    margin: 0 auto;
+  }
+  .CarButtonBox > button:first-child {
+    margin-bottom: 1rem;
+  }
+}
 footer {
+  margin-top: 4vh;
+  height: 5vh;
   text-align: center;
-  position: absolute;
-  bottom: -200vh;
   width: 100%;
   background-color: salmon;
+  display: flex;
+  align-items: center;
+}
+
+footer > div {
+  display: flex;
 }/*# sourceMappingURL=index.css.map */
