--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@ body {
 
 .scroll-container {
   height: 100vh;
+  overflow-x: hidden;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
@@ -209,7 +210,7 @@ header {
     margin-top: 58vh;
   }
   .CarButtonBox > * {
-    width: 300px;
+    width: 90%;
     margin: 0 auto;
   }
   .CarButtonBox > button:first-child {
@@ -217,15 +218,27 @@ header {
   }
 }
 footer {
-  margin-top: 4vh;
-  height: 5vh;
-  text-align: center;
+  margin-top: 6vh;
   width: 100%;
   background-color: salmon;
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  font-size: 0.8rem;
 }
 
 footer > div {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer > div > p {
+  padding: 0.5rem;
+}
+
+@media screen and (max-device-width: 684px) {
+  footer > div {
+    display: flex;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=index.css.map */
