--- a/src/styles/_ModelY.scss
+++ b/src/styles/_ModelY.scss
@@ -91,14 +91,13 @@
 
 .CarButtonBox {
   width: 100%;
-  margin-top: 65vh;
+  margin-top: 60vh;
   display: flex;
   justify-content: center;
 }
 
 .CarButtonBox > * {
   margin: 0 1rem;
-  color: white;
   height: 4.5vh;
   min-width: 310px;
   border-radius: 5px;
@@ -108,6 +107,7 @@
 
 .CarButtonBox > button:first-child {
   background-color: rgba(39, 39, 39, 0.886);
+  color: white;
   border: 0;
 }
 
@@ -115,6 +115,42 @@
   background-color: #e5e5e5b6;
   color: #171a20d1;
   border: 0;
+}
+
+.CarButtonBoxEnergy {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 60vh;
+}
+
+.CarButtonBoxEnergy > * {
+  background-color: rgba(39, 39, 39, 0.886);
+  color: white;
+  border: 0;
+  height: 4.5vh;
+  font-weight: bold;
+  min-width: 310px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+}
+.CarButtonBoxAccesory {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 70vh;
+}
+
+.CarButtonBoxAccesory > button {
+  background-color: rgba(39, 39, 39, 0.886);
+  color: white;
+  border: 0;
+  margin: 0 1rem;
+  height: 4.5vh;
+  min-width: 310px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .CarInformations {
@@ -127,6 +163,61 @@
 }
 
 @media screen and (max-device-width: 684px) {
+  .Car_container {
+    background: url("../assets/Homepage-ModelY-LHD-Mobile.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    width: 100%;
+  }
+
+  .Car_container2 {
+    background: url("../assets/Homepage-Model-3-LHD-Mobile.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    width: 100%;
+  }
+
+  .Car_container3 {
+    background: url("../assets/Model-S-homepage-mobile.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    width: 100%;
+  }
+  /*test*/
+  .Car_container4 {
+    background: url("../assets/Homepage-Model-X-Mobile-LHD-v2-412.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    width: 100%;
+  }
+
+  .Car_container5 {
+    background: url("../assets/Homepage-SolarPanels-Mobile.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    width: 100%;
+  }
+
+  .Car_container6 {
+    background: url("../assets/Homepage-Accessories-Mobile.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    width: 100%;
+  }
+
+  .CarTitleBox {
+    padding-top: 20vh;
+  }
+
+  .CarTitle {
+    font-size: 1.6rem;
+  }
+
+  .CarInformationSup {
+    font-size: 0.9rem;
+    font-weight: 200;
+  }
+
   .CarButtonBox {
     flex-direction: column;
     margin-top: 58vh;
@@ -135,6 +226,20 @@
   .CarButtonBox > * {
     width: 90%;
     margin: 0 auto;
+  }
+
+  .CarButtonBoxEnergy > * {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .CarButtonBoxAccesory > * {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .CarButtonBoxEnergy {
+    margin-top: 60vh;
   }
 
   .CarButtonBox > button:first-child {
