--- a/src/styles/_ModelY.scss
+++ b/src/styles/_ModelY.scss
@@ -91,7 +91,7 @@
 
 .CarButtonBox {
   width: 100%;
-  margin-top: 60vh;
+  margin-top: 63vh;
   display: flex;
   justify-content: center;
 }
@@ -99,7 +99,7 @@
 .CarButtonBox > * {
   margin: 0 1rem;
   height: 4.5vh;
-  min-width: 310px;
+  min-width: 300px;
   border-radius: 5px;
   font-size: 0.9rem;
   font-weight: bold;
@@ -121,7 +121,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 60vh;
+  margin-top: 62vh;
 }
 
 .CarButtonBoxEnergy > * {
@@ -130,7 +130,7 @@
   border: 0;
   height: 4.5vh;
   font-weight: bold;
-  min-width: 310px;
+  width: 300px;
   font-size: 0.9rem;
   border-radius: 5px;
 }
@@ -138,7 +138,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 70vh;
+  margin-top: 65vh;
 }
 
 .CarButtonBoxAccesory > button {
@@ -147,7 +147,7 @@
   border: 0;
   margin: 0 1rem;
   height: 4.5vh;
-  min-width: 310px;
+  width: 300px;
   border-radius: 5px;
   font-size: 0.9rem;
   font-weight: bold;
@@ -156,7 +156,7 @@
 .CarInformations {
   text-align: center;
   text-decoration: underline;
-  margin-top: 2.5vh;
+  margin-top: 4vh;
   font-size: 0.8rem;
   text-underline-offset: 0.2rem;
   color: #171a20;
@@ -165,42 +165,42 @@
 @media screen and (max-device-width: 684px) {
   .Car_container {
     background: url("../assets/Homepage-ModelY-LHD-Mobile.jpg");
-    background-position: 50% 50%;
+    background-position: 50% 30%;
     background-size: cover;
     width: 100%;
   }
 
   .Car_container2 {
     background: url("../assets/Homepage-Model-3-LHD-Mobile.jpg");
-    background-position: 50% 50%;
+    background-position: 50% 30%;
     background-size: cover;
     width: 100%;
   }
 
   .Car_container3 {
     background: url("../assets/Model-S-homepage-mobile.jpg");
-    background-position: 50% 50%;
+    background-position: 50% 30%;
     background-size: cover;
     width: 100%;
   }
   /*test*/
   .Car_container4 {
     background: url("../assets/Homepage-Model-X-Mobile-LHD-v2-412.jpg");
-    background-position: 50% 50%;
+    background-position: 50% 30%;
     background-size: cover;
     width: 100%;
   }
 
   .Car_container5 {
     background: url("../assets/Homepage-SolarPanels-Mobile.jpg");
-    background-position: 50% 50%;
+    background-position: 50% 30%;
     background-size: cover;
     width: 100%;
   }
 
   .Car_container6 {
     background: url("../assets/Homepage-Accessories-Mobile.jpg");
-    background-position: 50% 50%;
+    background-position: 50% 30%;
     background-size: cover;
     width: 100%;
   }
@@ -220,7 +220,7 @@
 
   .CarButtonBox {
     flex-direction: column;
-    margin-top: 58vh;
+    margin-top: 54vh;
   }
 
   .CarButtonBox > * {
