sidebar pas mal

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,7 +67,7 @@ header {
   margin-right: 0.9rem;
   background: none;
   border: 0px;
-  font-size: 1rem;
+  font-size: 0.9rem;
   cursor: pointer;
 }
 
@@ -76,6 +76,33 @@ header {
     grid-template-columns: 2fr 3fr 2fr;
   }
 }
+.sideBarContainer {
+  padding: 3vh;
+  position: absolute;
+  right: 0rem;
+  top: 0;
+  width: 320px;
+  height: 100vh;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+}
+
+.sideBarButton {
+  border: 0;
+  margin: 0 0 3vh 0;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  background-color: yellow;
+}
+
+.sideBarLink {
+  padding: 1.5vh 0;
+  color: #171a20;
+  text-decoration: none;
+}
+
 .Car_container {
   height: 100vh;
   scroll-snap-align: start;
