--- a/src/styles/_ModelY.scss
+++ b/src/styles/_ModelY.scss
@@ -84,7 +84,7 @@
 .CarInformationSup {
   font-size: 1rem;
 
-  margin: 1vh auto;
+  margin: 3vh auto;
   text-align: center;
   text-underline-offset: 0.3rem;
   color: #171a20;
@@ -97,7 +97,8 @@
   justify-content: center;
 }
 
-.CarButtonBox > * {
+.CarButtonBox > div > button {
+  border: none;
   margin: 0 1rem;
   height: 4.5vh;
   min-width: 300px;
@@ -106,13 +107,13 @@
   font-weight: bold;
 }
 
-.CarButtonBox > button:first-child {
+.CarButtonBox > div:first-child > button {
   background-color: rgba(39, 39, 39, 0.886);
   color: white;
   border: 0;
 }
 
-.CarButtonBox > button:last-child {
+.CarButtonBox > div:last-child > button {
   background-color: #e5e5e5b6;
   color: #171a20d1;
   border: 0;
@@ -122,10 +123,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 62vh;
+  margin-top: 60vh;
 }
 
-.CarButtonBoxEnergy > * {
+.CarButtonBoxEnergy > div > * {
   background-color: rgba(39, 39, 39, 0.886);
   color: white;
   border: 0;
@@ -142,7 +143,7 @@
   margin-top: 65vh;
 }
 
-.CarButtonBoxAccesory > button {
+.CarButtonBoxAccesory > div > button {
   background-color: rgba(39, 39, 39, 0.886);
   color: white;
   border: 0;
@@ -211,30 +212,37 @@
   }
 
   .CarTitle {
-    font-size: 1.6rem;
+    font-size: 2rem;
+  }
+
+  .CarReserve {
+    font-size: 0.8rem;
   }
 
   .CarInformationSup {
-    font-size: 0.9rem;
-    font-weight: 200;
+    font-size: 0.8rem;
   }
 
   .CarButtonBox {
     flex-direction: column;
-    margin-top: 54vh;
+    margin-top: 52vh;
   }
 
-  .CarButtonBox > * {
+  .CarButtonBox > div {
+    margin: 1vh auto;
+  }
+
+  .CarButtonBox > div > * {
     width: 90%;
     margin: 0 auto;
   }
 
-  .CarButtonBoxEnergy > * {
-    width: 90%;
+  .CarButtonBoxEnergy > div > * {
     margin: 0 auto;
+    width: 90%;
   }
 
-  .CarButtonBoxAccesory > * {
+  .CarButtonBoxAccesory > div > * {
     width: 90%;
     margin: 0 auto;
   }
