--- a/src/styles/_ModelY.scss
+++ b/src/styles/_ModelY.scss
@@ -95,6 +95,7 @@
   margin-top: 63vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .CarButtonBox > div > button {
@@ -123,6 +124,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 60vh;
 }
 
@@ -140,6 +142,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 65vh;
 }
 
